--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,13 @@
     "lib": ["es6", "es7", "dom"],
     "sourceMap": true,
     "allowJs": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "strict": true,
     "strictFunctionTypes": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noImplicitAny": true,
     "noUnusedLocals": true,
     "pretty": true,
     "allowSyntheticDefaultImports": true,
