--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sharp": "^2.0.29",
     "gatsby-source-filesystem": "^2.0.27",
+    "gatsby-plugin-typescript": "^2.0.11",
     "gatsby-transformer-sharp": "^2.1.17",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
@@ -19,7 +20,25 @@
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
-    "prettier": "^1.16.4"
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@types/jest": "^24.0.11",
+    "@types/react-helmet": "^5.0.7",
+    "@types/react-test-renderer": "^16.0.3",
+    "babel-core": "^7.0.0-0",
+    "babel-jest": "^24.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.5.0",
+    "prettier": "^1.14.2",
+    "react-test-renderer": "^16.5.2",
+    "ts-jest": "^24.0.0",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.1.2"
   },
   "keywords": [
     "gatsby"
@@ -32,27 +51,6 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
-  },
-  "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "@types/jest": "^23.3.5",
-    "@types/react-helmet": "^5.0.7",
-    "@types/react-test-renderer": "^16.0.3",
-    "babel-core": "^7.0.0-0",
-    "babel-jest": "^23.6.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
-    "prettier": "^1.14.2",
-    "react-test-renderer": "^16.5.2",
-    "ts-jest": "^23.10.4",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "tslint-react": "^3.6.0",
-    "typescript": "^3.1.2"
   },
   "repository": {
     "type": "git",
