--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-test-renderer": "^16.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -33,7 +34,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.5.0",
     "prettier": "^1.14.2",
-    "react-test-renderer": "^16.5.2",
     "ts-jest": "^24.0.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
