--- a/package.json
+++ b/package.json
@@ -29,15 +29,23 @@
     "@types/jest": "^24.0.11",
     "@types/react-helmet": "^5.0.7",
     "@types/react-test-renderer": "^16.0.3",
+    "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^24.5.0",
+    "eslint": "^5.15.2",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "gatsby-plugin-eslint": "^2.0.4",
+    "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.5.0",
+    "lint-staged": "^8.1.5",
     "prettier": "^1.14.2",
     "ts-jest": "^24.0.0",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "tslint-react": "^3.6.0",
     "typescript": "^3.1.2"
   },
   "keywords": [
@@ -89,6 +97,17 @@
     },
     "setupFiles": [
       "<rootDir>/loadershim.js"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsc --noEmit && lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,jsx}": [
+      "eslint . --fix",
+      "git add"
     ]
   }
 }
