--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0",
-    "react-test-renderer": "^16.8.4"
+    "react-helmet": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -33,6 +32,7 @@
     "@typescript-eslint/parser": "^1.4.2",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^24.5.0",
+    "babel-preset-gatsby": "^0.1.9",
     "eslint": "^5.15.2",
     "eslint-config-prettier": "^4.1.0",
     "eslint-loader": "^2.1.2",
@@ -42,8 +42,10 @@
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.5.0",
+    "jest-dom": "^3.1.3",
     "lint-staged": "^8.1.5",
     "prettier": "^1.14.2",
+    "react-testing-library": "^6.0.0",
     "ts-jest": "^24.0.0",
     "tslint": "^5.11.0",
     "typescript": "^3.1.2"
@@ -58,7 +60,9 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "jest --watch",
+    "test:single": "jest",
+    "jest": "jest"
   },
   "repository": {
     "type": "git",
@@ -66,38 +70,6 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest",
-      "^.+\\.jsx?$": "<rootDir>/jest-preprocess.js"
-    },
-    "testRegex": "(/__tests__/.*\\.([tj]sx?)|(\\.|/)(test|spec))\\.([tj]sx?)$",
-    "moduleNameMapper": {
-      ".+\\.(css|styl|less|sass|scss)$": "identity-obj-proxy",
-      ".+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
-    },
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ],
-    "testPathIgnorePatterns": [
-      "node_modules",
-      ".cache"
-    ],
-    "transformIgnorePatterns": [
-      "node_modules/(?!(gatsby)/)"
-    ],
-    "globals": {
-      "__PATH_PREFIX__": ""
-    },
-    "setupFiles": [
-      "<rootDir>/loadershim.js"
-    ]
   },
   "husky": {
     "hooks": {
