--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sharp": "^2.0.29",
-    "gatsby-source-filesystem": "^2.0.27",
     "gatsby-plugin-typescript": "^2.0.11",
+    "gatsby-plugin-typography": "^2.2.10",
+    "gatsby-source-filesystem": "^2.0.27",
+    "gatsby-transformer-remark": "^2.3.7",
     "gatsby-transformer-sharp": "^2.1.17",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19",
+    "typography-theme-alton": "^0.16.19"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -28,6 +33,7 @@
     "@types/jest": "^24.0.11",
     "@types/react-helmet": "^5.0.7",
     "@types/react-test-renderer": "^16.0.3",
+    "@types/typography": "^0.16.2",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
     "babel-core": "^7.0.0-0",
